[workspace]
members = [
	"contracts/*",
	"test"
]

[workspace.package]
license = "BSD-3"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "1.1.5"
cosmwasm-std = "1.1.5"
cosmwasm-storage = "1.1.5"
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
cw20 = "0.16.0"
cw20-base = "0.16.0"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw-multi-test = "0.15.1"

bond-token = { path = "./contracts/bond-token"}
currency = { path = "./contracts/currency" }
factory = { path = "./contracts/factory" }
placeholder = { path = "./contracts/placeholder" }
router = { path = "./contracts/router" }
asset-vault = { path = "./contracts/asset-vault" }